dsl search előtt
