# src/main/openapi/catalog-service-openapi.yml
@@ -7,39 +7,6 @@ servers:
   - url: 'https://localhost:8087'
 paths:
   /api/categories:
-    get:
-      tags:
-        - categoryController
-      operationId: findCategoryAll
-      parameters:
-        - name: full
-          in: query
-          required: false
-          schema:
-            type: boolean
-        - schema:
-            type: integer
-          in: query
-          name: page
-        - schema:
-            type: integer
-          in: query
-          name: size
-        - schema:
-            type: array
-            items:
-              type: string
-          in: query
-          name: sort
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CategoryDto'
     post:
       tags:
         - categoryController
@@ -135,6 +102,40 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/HistoryDataCategoryDto'
+  /api/categories/search:
+    get:
+      tags:
+        - categoryController
+      operationId: search
+      parameters:
+        - name: full
+          in: query
+          required: false
+          schema:
+            type: boolean
+        - schema:
+            type: integer
+          in: query
+          name: page
+        - schema:
+            type: integer
+          in: query
+          name: size
+        - schema:
+            type: array
+            items:
+              type: string
+          in: query
+          name: sort
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryDto'
   /api/products:
     get:
       tags:
@@ -289,40 +290,7 @@ paths:
             application/json:
               schema:
                 type: string
-  /api/products/search:
-    get:
-      tags:
-        - productController
-      operationId: search
-      parameters:
-        - name: full
-          in: query
-          required: false
-          schema:
-            type: boolean
-        - schema:
-            type: integer
-          in: query
-          name: page
-        - schema:
-            type: integer
-          in: query
-          name: size
-        - schema:
-            type: array
-            items:
-              type: string
-          in: query
-          name: sort
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ProductDto'
+
 
 
 components:
@@ -367,6 +335,8 @@ components:
           type: integer
         category:
           $ref: '#/components/schemas/CategoryDto'
+        artical_number:
+          type: string
     HistoryDataProductDto:
       type: object
       properties:
